Добавление для 2ух заголовков Aнимации с помощью animate.css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <main class="main">
             <section class="section-first">
                 <div class="section-first__title">
-                    <h1  class="title">Что Вам необходимо?</h1>
+                    <h1  class="title animate__animated animate__pulse animate__infinite">Что Вам необходимо?</h1>
                 </div>
                 <div class="section-first__container">
                     <div class="section-first__container-block">
@@ -85,7 +85,7 @@
             </section>
 
             <section class="section-second">
-                <h1 class="title">Форма заказа обратной звонка</h1>
+                <h1 class="title animate__animated animate__heartBeat">Форма заказа обратной звонка</h1>
                 <form action="" placeholder="Имя">
                     <input type="text" placeholder="Имя">
                     <input type="email" placeholder="Email">
