Добавление 2ух анимаций в main на картинку и текст

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="section-first__container">
                     <div class="section-first__container-block">
-                        <img src="img/f3.png" alt="" />
+                        <img src="img/f3.png" alt="" class="section-first__container-img"/>
                         <h2>Первый блок</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing
@@ -66,7 +66,7 @@
                         </p>
                     </div>
                     <div class="section-first__container-block">
-                        <img src="img/f4.png" alt="" />
+                        <img src="img/f4.png" alt="" class="section-first__container-img"/>
                         <h2>Второй блок</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing
@@ -74,7 +74,7 @@
                         </p>
                     </div>
                     <div class="section-first__container-block">
-                        <img src="img/f5.png" alt="" />
+                        <img src="img/f5.png" alt="" class="section-first__container-img"/>
                         <h2>Третий блок</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing
