Добавление медиа запросов

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </section>
 
             <section class="section-second">
-                <h1 class="title animate__animated animate__heartBeat">Форма заказа обратной звонка</h1>
+                <h1 class="title animate__animated animate__heartBeat">Форма заказа обратного звонка</h1>
                 <form action="" placeholder="Имя">
                     <input type="text" placeholder="Имя">
                     <input type="email" placeholder="Email">
