Добавил блок Регистрация

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
                 </div>
             </section>
 
+            <section class="section-second-dop">
+                <h1 class="title animate__animated animate__heartBeat">Регистрация</h1>
+                <form action="" placeholder="Имя">
+                    <input type="text" placeholder="Имя">
+                    <input type="password" placeholder="Пароль">
+                    <input type="email" placeholder="Email">
+                    <input type="tel" placeholder="Телефон">                    
+                    <button type="submit" method="post">Зарегистрироваться</button>
+                </form>
+            </section>
+
             <section class="section-second">
                 <h1 class="title animate__animated animate__heartBeat">Форма заказа обратного звонка</h1>
                 <form action="" placeholder="Имя">
