--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <input type="email" placeholder="Email" required>
                     <input type="tel" placeholder="Телефон" requiredy pattern="((\+7)|8)\d{10}">
                     <input type="text" placeholder="Какая тема интересует?" required>
-                    <button type="submit" method="post">Отправить вопрос!</button>
+                    <button type="submit" method="post">Отправить запрос!</button>
                 </form>
             </section>
 
