Добавил 2ой файл JS для изменения стилей

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h1 class="conteiner-header__left__h1 text--white">
                         С помощью нас <br />вы сможете создать то, о чем
                     </h1>
-                    <span class="conteiner-header__left__span text--white"
+                    <span class="conteiner-header__left__span text--white" id="spn"
                         >желаете!</span
                     >
                     <p class="conteiner-header__left__p text--white">
@@ -110,6 +110,7 @@
             
         </main>
 
-        <footer class="footer text--white">ⒸВсё на этом сайте защищено</footer>
+        <footer class="footer text--white" id="foot">ⒸВсё на этом сайте защищено</footer>
+        <script src="js/switch_color.js"></script>
     </body>
 </html>
