--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
@@ -52,7 +52,7 @@
         </header>
 
         <main class="main">
-            <section class="section-first">
+            <!-- <section class="section-first">
                 <div class="section-first__title">
                     <h1  class="title animate__animated animate__pulse animate__infinite">Что Вам необходимо?</h1>
                 </div>
@@ -82,8 +82,8 @@
                         </p>
                     </div>
                 </div>
-            </section>
-
+            </section> -->
+<div id="app"></div>
             <section class="section-second-dop">
                 <h1 class="title animate__animated animate__heartBeat">Регистрация</h1>
                 <form id="form">
